# chextra

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/autodocs/: chextras.md
src/chextra/: __init__.py
tests/: test_module_imports.py
