[project]
name = "chextra"
version = "0.1.1"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Arne Caratti", email = "arne.recknagel@hotmail.com"}]
maintainers = [{name = "Arne Caratti", email = "arne.recknagel@hotmail.com"}]
description = "Arm your library with a simple warning-call if users try to make use of uninstalled extras."
keywords = ["extra", "extras", "warning", "metadata"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "packaging>=23.0",
]
[project.urls]
documentation = "https://a-recknagel.github.io/chextra/"
repository = "https://github.com/a-recknagel/chextra"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs-material>=9.1.5",
    "mkdocs-section-index>=0.3.5",
    "mkdocs>=1.4.2",
    "mkdocstrings[python]>=0.20.0",
]
test = [
    "pytest>=7.2.2",
    "pytest-cov>=4.0.0",
    "mypy>=1.1.1",
]
lint = [
    "isort>=5.12.0",
    "black>=23.3.0",
]
security = [
    "bandit>=1.7.5",
    "safety>=2.3.4",
]

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
data_file = ".coverage/coverage_report"
source = ["chextra"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
